# uv-kernel

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/uv_kernels/: __init__.py  manager.py
