[project]
name = "uv-kernels"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ulrik Sverdrup", email = "ulrik.sverdrup@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jupyter-client>=8.6.3",
    "traitlets>=5.14.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
